[gd_scene load_steps=2 format=3 uid="uid://research_screen"]

[ext_resource type="Script" path="res://scripts/states/research_state.gd" id="1"]

[node name="Research" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.15, 0.1, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
text = "RESEARCH"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 36

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AvailableResearchLabel" type="Label" parent="MainContainer/LeftPanel"]
layout_mode = 2
text = "AVAILABLE RESEARCH"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="AvailableResearchList" type="VBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActiveResearchLabel" type="Label" parent="MainContainer/RightPanel"]
layout_mode = 2
text = "ACTIVE RESEARCH"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="ActiveResearchList" type="VBoxContainer" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="CompletedResearchLabel" type="Label" parent="MainContainer/RightPanel"]
layout_mode = 2
text = "COMPLETED RESEARCH"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="CompletedResearchList" type="VBoxContainer" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="BottomPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackButton" type="Button" parent="BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "BACK TO GEOSCAPE"
